# ecsc23-badge

./: .gitignore  README.md
devboard/: devboard.kicad_pcb  devboard.kicad_prl  devboard.kicad_pro  devboard.kicad_sch  devboard.xml  generate.sh  glitcher.kicad_sch  sym-lib-table  target.kicad_sch
firmware/ECSC23/: ECSC23.ioc  Makefile
firmware/ECSC23/Inc/: chall1.h  debug.h
firmware/ECSC23/Src/: chall1.c  chall2.c  chall3.c  chall4.c  debug.c  main.c  print.c
fw/ECSC23/: .mxproject  ECSC23.ioc  Makefile  openocd_flash.cfg  stm32f103c8.cfg  stm32f103c8.svd
fw/ECSC23/Inc/: aes.h  chall2.h  chall3.h  chall4.h  crc32.h  eeprom.h  main.h  print.h  security.h  stm32f1xx_it.h
fw/ECSC23/Src/: aes.c  chall1.c  chall2.c  chall3.c  chall4.c  crc32.c  eeprom.c  gpio.c  i2c.c  main.c  print.c  security.c  stm32f1xx_it.c  usart.c
fw/glitcher/: CMakeLists.txt  adc.c  adc.h  cdc_sump.c  glitch.c  glitch.h  hello_world.c  main.c  output.c  output.h  tusb_config.h  usb_descriptors.c
glitcher/: MS9280.kicad_sym  fp-info-cache  fp-lib-table  glitcher.kicad_pcb  glitcher.kicad_prl  glitcher.kicad_pro  glitcher.kicad_sch  sym-lib-table
glitcher/ENISA23_VG_PCB.pretty/: VoltageGlitcher.dxf  VoltageGlitcher_F.Cu.kicad_mod  VoltageGlitcher_F.Mask.kicad_mod  VoltageGlitcher_F.SilkS.kicad_mod
production_flashing/: batch_flash_glitcher.sh  batch_flash_target.sh  glitcher.uf2  openocd_flash.cfg
writeups/: README.md  chall1.md  chall2.md  chall3.md  chall4.md
